Structured data refactor
